# ImageCreator

./: Cargo.toml  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: create_datapack.rs  main.rs
src-tauri/src/create_datapack/: format_value.rs
src-tauri/src/create_datapack/gif/: create_datapack_gif.rs  create_gif.rs  format_template_gif_frame.rs  format_template_gif_step.rs  mod.rs
src-tauri/src/create_datapack/image/: create_datapack_image.rs  create_image.rs  format_template_image.rs  mod.rs
src-tauri/src/preview/: mod.rs  modify_preview_image.rs
src-tauri/src/util/: change_image_options.rs  image_to_base64.rs  mod.rs
